# nnQC

./: .gitignore  .gitmodules  CITATION.cff  LICENSE  README.md  config.yml  inference.py  pyproject.toml  requirements.txt  setup.py  tutorial.ipynb
config/: config_train_16g.json  config_train_32g.json  config_train_32g_ano.json  environment.json
configs/prostate/: config.json
configs/spleen/: config.json
nnQC/: __init__.py  cli.py  data_preparation.py  fournel_experiment.py  preprocessing.py  test.py  train_AE.py  train_generator.py  train_ldm.py
nnQC/evaluation/: __init__.py
nnQC/inference/: __init__.py  evaluation.py  inference.py
nnQC/models/: diffusion_model_unet.py  fournel_et_al.py  gans.py  networks.py  trainers.py  xa.py
nnQC/training/: __init__.py  train_autoencoder.py  train_diffusion.py
nnQC/utils/: dataset.py  evaluation.py  plotting.py  preprocess.py  utils.py  visualize_image.py
nnqc/: __init__.py  cli.py  config.py  corruptions.py  evaluate.py  hub.py  infer.py  metrics.py  train.py  utils.py  visualize.py  xa.py
nnqc/inference/: inference.py
nnqc/presets/prostate/: config.json  env.json
nnqc/presets/prostate_bin/: config.json  env.json
nnqc/presets/spleen/: config.json  env.json
nnqc/training/: train_autoencoder.py  train_diffusion.py
nnqc/utils/: __init__.py  download_msd_data.py  utils.py
scripts/: eval_qc_calibration.py  eval_visualize.py  sweep_ddim_steps.py  train_autoencoder.py  train_diffusion.py
tutorials/: TUTORIAL.md
